modal: Use Bootstrap4 Modal windows in Settings page.

--- a/templates/zerver/app/navbar.html
+++ b/templates/zerver/app/navbar.html
@@ -120,7 +120,7 @@
                   <a class="dropdown-item" role="menuitem" href="#webathena" ><i class="fa fa-bolt" aria-hidden="true"></i>{{ _('Link with Webathena') }}</a>
                   {% endif %}
 
-                  <a class="dropdown-item" role="menuitem" href="#logout" ><i class="fa fa-power-off" aria-hidden="true"></i> {{ _('Log out') }} </a>
+                  <a class="dropdown-item logout_button" role="menuitem" href="#logout" ><i class="fa fa-power-off" aria-hidden="true"></i> {{ _('Log out') }} </a>
 
                   {% if show_debug %}
                   <a class="dropdown-item" role="menuitem" href="#debug" ><i class="fa fa-barcode" aria-hidden="true"></i> {{ _('Debug') }} </a>
