uploads: Show used upload space in attachments UI.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1911,3 +1911,9 @@ thead .actions {
 #get_api_key_button {
     display: block;
 }
+
+#attachment-stats-holder {
+    position: relative;
+    margin-top: 13px;
+    display: inline-block;
+}
