--- a/static/templates/settings/attachments-settings.handlebars
+++ b/static/templates/settings/attachments-settings.handlebars
@@ -1,4 +1,5 @@
 <div id="attachments-settings" class="settings-section" data-name="uploaded-files">
+    <div id="attachment-stats-holder"></div>
     <input id="upload_file_search" class="search" type="text" placeholder="{{t 'Search uploads...' }}" aria-label="{{t 'Search uploads...' }}"/>
     <div class="clear-float"></div>
     <div class="alert" id="delete-upload-status"></div>
