messages: Add support for quickly deleting all messages in a topic.
This is primarily a feature for onboarding, where an organization
administrator might send a bunch of random test messages as part of
joining, but then want a pristine organization when their users later
join.

But it can theoretically be used for other use cases (e.g. for
moderation or removing threads that are problematic in some way).

Tweaked by tabbott to handle corner cases with
is_history_public_to_subscribers.

Fixes #10912.

--- a/static/templates/topic_sidebar_actions.handlebars
+++ b/static/templates/topic_sidebar_actions.handlebars
@@ -31,5 +31,13 @@
         </a>
     </li>
 
+    {{#if is_admin}}
+    <li>
+        <a class="sidebar-popover-delete-topic-messages" data-stream-id="{{ stream_id }}" data-topic-name="{{ topic_name }}">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+            {{#tr this}}Delete all messages in <b>__topic_name__</b>{{/tr}}
+        </a>
+    </li>
+    {{/if}}
 
 </ul>
