--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -156,5 +156,6 @@
     {% include "zerver/app/deprecation_notice.html" %}
     <div id="user-profile-modal-holder"></div>
     <div class='notifications top-right'></div>
+    <div id="delete-topic-modal-holder"></div>
 </div>
 {% endblock %}
