settings: Add support for uploading logo for night mode.
This adds a new field named realm_night_logo which is used for
dispalying oragnisation logo when the user is in night mode.

Fixes #11176

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -97,6 +97,7 @@ label {
 
 .user-avatar-section,
 .realm-logo-section,
+.realm-night-logo-section,
 .realm-icon-section {
     position: relative;
 }
@@ -105,6 +106,9 @@ label {
     margin-bottom: 10px;
 }
 
+.realm-night-logo-block {
+    margin-bottom: 10px;
+}
 .user-avatar-section {
     float: right;
 }
@@ -122,7 +126,8 @@ label {
 
 .user-avatar-section .inline-block,
 .realm-logo-section .inline-block,
-.realm-icon-section .inline-block {
+.realm-icon-section .inline-block,
+.realm-night-logo-section .inline-block {
     margin: 5px 20px 0px 0px;
     vertical-align: top;
 
@@ -486,7 +491,8 @@ input[type=checkbox] + .inline-block {
     margin-top: 0px;
 }
 
-.realm-logo-section {
+.realm-logo-section,
+.realm-night-logo-section {
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -970,7 +976,8 @@ input[type=checkbox].inline-block {
 
 #upload_avatar_spinner,
 #upload_logo_spinner,
-#upload_icon_spinner {
+#upload_icon_spinner,
+#upload_night_logo_spinner {
     font-size: 14px;
     margin: auto;
 }
@@ -1113,7 +1120,8 @@ input[type=checkbox].inline-block {
     height: 100px;
 }
 
-#realm-settings-logo {
+#realm-settings-logo,
+#realm-settings-night-logo {
     border-radius: 5px;
     box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.2);
     /* We allow actual images up to 800x100 in the main display, but the
@@ -1690,7 +1698,8 @@ input[type=text]#settings_search {
 }
 
 @media (max-width: 1023px) {
-    #realm-settings-logo {
+    #realm-settings-logo,
+    #realm-settings-night-logo {
         max-width: 600px;
         height: 75px;
     }
@@ -1716,7 +1725,8 @@ input[type=text]#settings_search {
         margin: 5px 0 0 0;
     }
 
-    #realm-settings-logo {
+    #realm-settings-logo,
+    #realm-settings-night-logo {
         max-width: 400px;
         height: 50px;
     }
