--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2163,7 +2163,8 @@ div.floating_recipient {
 }
 
 .settings-section .realm-icon-section .loading_indicator_text,
-.settings-section .realm-logo-section .loading_indicator_text {
+.settings-section .realm-logo-section .loading_indicator_text,
+.settings-section .realm-night-logo-section .loading_indicator_text {
     font-size: 14px;
     font-weight: 400;
     vertical-align: middle;
@@ -2175,7 +2176,8 @@ div.floating_recipient {
 }
 
 .settings-section .realm-logo-section .loading_indicator_spinner,
-.settings-section .realm-icon-section .loading_indicator_spinner {
+.settings-section .realm-icon-section .loading_indicator_spinner,
+.settings-section .realm-night-logo-section .loading_indicator_spinner {
     width: 10%;
     height: 16px;
     margin-top: 2px;
