Add edit button in admin filters table

--- a/static/templates/admin_filter_list.handlebars
+++ b/static/templates/admin_filter_list.handlebars
@@ -11,6 +11,9 @@
         <button class="button small delete btn-danger" data-filter-id="{{id}}">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button>
+        <button class="button rounded small btn-warning open-linkifier-form" title="{{t 'Edit linkifier' }}" data-url-format-string="{{url_format_string}}" data-pattern="{{pattern}}" data-filter-id="{{id}}">
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+        </button>
     </td>
     {{/if}}
 </tr>
