settings: Allow editing of linkifiers.
Fixes #10830

--- a/static/templates/admin-settings-modals.handlebars
+++ b/static/templates/admin-settings-modals.handlebars
@@ -7,3 +7,5 @@
 {{ partial "resend-invite-modal" }}
 
 <div id="user-info-form-modal-container"></div>
+
+<div id="linkifier-info-form-modal-container"></div>
