--- a/static/templates/settings/linkifier-settings-admin.handlebars
+++ b/static/templates/settings/linkifier-settings-admin.handlebars
@@ -50,6 +50,7 @@
             </tbody>
         </table>
     </div>
+    <div class="alert" id="success-edit-status"></div>
     {{#if is_admin}}
     <form class="form-horizontal admin-filter-form">
         <div class="add-new-filter-box grey-box">
