--- a/templates/zerver/app/keyboard_shortcuts.html
+++ b/templates/zerver/app/keyboard_shortcuts.html
@@ -17,7 +17,7 @@
                     <td class="definition">{% trans %}New stream message{% endtrans %}</td>
                 </tr>
                 <tr>
-                    <td class="hotkey">x</td>
+                    <td class="hotkey">x, C</td>
                     <td class="definition">{% trans %}New private message{% endtrans %}</td>
                 </tr>
                 <tr>
