--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -46,7 +46,8 @@
 
 #stream_filters {
     overflow: visible;
-    margin: 2px 0px 22px 0px;
+    /* The -1px here prevents the scrollbar from going above the top of the container */
+    margin: -1px 0px 22px 0px;
     padding: 0;
     font-weight: normal;
 }
