header: Fix height and button size.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -203,6 +203,7 @@
     color: hsl(0, 0%, 52%);
     display: block;
     width: 40px;
+    height: 40px;
     padding-top: 12px;
     padding-bottom: 9px;
 }
