user status: Add ability to edit status text.

--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -95,4 +95,11 @@
         </a>
     </li>
     {{/if}}
+    {{#if is_me}}
+    <li>
+        <a href="#" class="update_status_text">
+            <i class="fa fa-comments" aria-hidden="true"></i> {{#tr this}}Update status{{/tr}}
+        </a>
+    </li>
+    {{/if}}
 </ul>
