--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -150,6 +150,17 @@
             </div>
         </div>
     </div>
+    <div class="user_status_overlay overlay new-style" data-overlay="user_status_overlay" aria-hidden="true">
+        <div class="overlay-content modal-bg">
+            <div class="user_status_change_title">Change user status</div>
+            <div>
+                <input type="text" class="user_status" />
+                <button class="sea-green rounded button set_user_status">
+                    Change
+                </button>
+            </div>
+        </div>
+    </div>
     {% include "zerver/app/invite_user.html" %}
     {% include "zerver/app/bankruptcy.html" %}
     {% include "zerver/app/logout.html" %}
