search: Display query when no results.
Add a span tag with ID to home.html. Create show_search_query() which
will generate html to insert into this tag and which we call in case
search results are empty. In this, we place <del> tags around
stop words present in the query (for strike through).
We stylize the search query to blue.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2079,6 +2079,16 @@ nav a .no-style {
     }
 }
 
+.empty_search_text {
+    span {
+        color: hsl(200, 100%, 40%);
+    }
+    del {
+        color: hsl(200, 100%, 40%);
+    }
+    font-weight: bold;
+}
+
 div.floating_recipient {
     border-collapse: separate;
     width: 100%;
