--- a/templates/zerver/app/home.html
+++ b/templates/zerver/app/home.html
@@ -142,6 +142,7 @@
         </p>
     </div>
     <div id="empty_search_narrow_message" class="empty_feed_notice">
+        <h5><span id="empty_search_stop_words_string" class="empty_search_text"></span></h5>
         <h4>{{ _('Nobody has talked about that yet!') }}</h4>
     </div>
     <div class="message_table focused_table" id="zhome" role="list" aria-live="polite" aria-label="{{ _('Messages') }}">
