--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2076,6 +2076,17 @@ nav a .no-style {
     }
 }
 
+.empty_search_text {
+    span {
+        color: hsl(200, 100%, 40%);
+        font-weight: bold;
+    }
+    del {
+        color: hsl(200, 100%, 40%);
+        font-weight: normal;
+    }
+}
+
 div.floating_recipient {
     border-collapse: separate;
     width: 100%;
