--- a/static/templates/widgets/poll-widget.handlebars
+++ b/static/templates/widgets/poll-widget.handlebars
@@ -14,9 +14,9 @@
     </div>
     <ul class="poll-widget">
     </ul>
-    <div class="poll-comment-bar">
-        <input type="text" class="poll-comment" placeholder="{{t 'New choice'}}" />
-        <button class="poll-comment">{{t "Add choice" }}</button>
+    <div class="poll-option-bar">
+        <input type="text" class="poll-option" placeholder="{{t 'New choice'}}" />
+        <button class="poll-option">{{t "Add choice" }}</button>
     </div>
     <br />
 </div>
