portico: Specifically mention open source projects in /for/open-source.

--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -102,7 +102,7 @@
 
             <div class="company-container">
                 <header>
-                    <h2 class="float left">Leading organizations use Zulip:</h2>
+                    <h2 class="float left">Leading open source projects use Zulip:</h2>
                     <div class="float clear"></div>
                 </header>
                 <div class="company-box">
