--- a/static/styles/billing.scss
+++ b/static/styles/billing.scss
@@ -106,7 +106,11 @@
             .management-type {
                 font-weight: bold;
                 font-size: 1.2em;
-                margin-top: 20px;
+                margin-top: 10px;
+            }
+            .management-type-text {
+                font-size: 1.1em;
+                margin-top: 5px;
             }
         }
     }
