--- a/templates/corporate/billing.html
+++ b/templates/corporate/billing.html
@@ -31,10 +31,14 @@
                 <div class="tab-content">
                     <div class="tab-pane active" id="overview">
                         <p>Your current plan is <strong>{{ plan_name }}</strong>.</p>
-                        <p>You are paying for <strong>{{ licenses }} users</strong>.</p>
+                        <p>You are using <strong>{{ licenses_used }} of {{ licenses }} licenses</strong>.</p>
                         <p>
+                            {% if renewal_amount %}
                             Your plan will renew on <strong>{{ renewal_date }}</strong> for
                             <strong>${{ renewal_amount }}</strong>.
+                            {% else %}
+                            Your plan ends on <strong>{{ renewal_date }}</strong>, and does not renew.
+                            {% endif %}
                         </p>
                     </div>
                     <div class="tab-pane" id="payment-method" data-email="{{stripe_email}}" data-key="{{publishable_key}}">
