left_sidebar: Add id to private list.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -14,7 +14,7 @@
                 </a>
                 <span class="arrow stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
             </li>
-            <li data-name="private" class="global-filter" title="{{ _('Private messages') }} (P)">
+            <li data-name="private" class="global-filter" title="{{ _('Private messages') }} (P)" id="private_li">
                 <a href="#narrow/is/private">
                     <span class="filter-icon">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
