portico: Add mariadb to for/open-source.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -1802,6 +1802,11 @@ nav ul li.active::after {
     background-color: transparent;
 }
 
+.portico-landing.hello .testimonials .company-box .company.mariadb {
+    background-image: url(/static/images/landing-page/logos/mariadb.png);
+    background-color: transparent;
+}
+
 .portico-landing.hello .testimonials .company-box .company.hail {
     background-image: url(/static/images/landing-page/logos/hail.png);
     background-color: transparent;
