--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -108,6 +108,7 @@
                 <div class="company-box">
                     <div class="company wikimedia-outreach"></div>
                     <div class="company wildfly"></div>
+                    <div class="company mariadb"></div>
                     <div class="company hail"></div>
                     <div class="company openshot"></div>
                     <div class="company mixxx"></div>
