portico: Update logos on /hello.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -513,14 +513,14 @@
                 </header>
                 <div class="company-box">
                     <div class="company akamai"></div>
+                    <div class="company wikimedia-outreach"></div>
                     <div class="company doctorondemand"></div>
+                    <div class="company mariadb"></div>
                     <div class="company levelup"></div>
                     <div class="company recurse"></div>
-                    <div class="company panjiva"></div>
-                    <div class="company layershift"></div>
-                    <div class="company solano"></div>
-                    <div class="company veelo"></div>
                     <div class="company cmt"></div>
+                    <div class="company layershift"></div>
+                    <div class="company panjiva"></div>
                 </div>
             </div>
         </div>
