--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -110,6 +110,7 @@
                     <div class="company wildfly"></div>
                     <div class="company mariadb"></div>
                     <div class="company hail"></div>
+                    <div class="company infinispan"></div>
                     <div class="company openshot"></div>
                     <div class="company mixxx"></div>
                     <div class="company fhir"></div>
