portico: Add inspire-hep to /for/open-source.

--- a/static/styles/landing-page.scss
+++ b/static/styles/landing-page.scss
@@ -1818,10 +1818,9 @@ nav ul li.active::after {
     background-color: transparent;
 }
 
-.portico-landing.hello .testimonials .company-box .company.openshot {
-    background-image: url(/static/images/landing-page/logos/openshot.png);
+.portico-landing.hello .testimonials .company-box .company.inspire-hep {
+    background-image: url(/static/images/landing-page/logos/inspire-hep.png);
     background-color: transparent;
-    height: 52px;
 }
 
 .portico-landing.hello .testimonials .company-box .company.wikimedia-outreach {
