--- a/templates/zerver/for-open-source.html
+++ b/templates/zerver/for-open-source.html
@@ -111,7 +111,7 @@
                     <div class="company mariadb"></div>
                     <div class="company hail"></div>
                     <div class="company infinispan"></div>
-                    <div class="company openshot"></div>
+                    <div class="company inspire-hep"></div>
                     <div class="company mixxx"></div>
                     <div class="company fhir"></div>
                     <div class="company hl7"></div>
