--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -244,7 +244,7 @@
         <div class="feature-block">
             <h3>SLACK/HIPCHAT/GITTER IMPORT</h3>
             <p>
-                Import an existing Slack, HipChat, or Gitter workspace into
+                Import an existing Slack, HipChat, Stride, or Gitter workspace into
                 Zulip.
             </p>
         </div>
