confirmation: Fix "continue to registration" full name handling.
Apparently, the "continue to registration" flow used a subtly invalid
way of encoding the full name.  We put in the query part of the action
URL of the HTML form, but apparently HTML forms with a `GET` type will
ignore the query part (replacing it with any input values), which
makes sense but doesn't do what we want here.  There are a few sane
ways to fix it, but given that the encoding logic we had before for
including the name in the URL was ugly, I'm pretty happy with just
adding a hidden input to the form for the name.

--- a/templates/zerver/confirm_continue_registration.html
+++ b/templates/zerver/confirm_continue_registration.html
@@ -32,6 +32,9 @@
                                 <button class="outline">
                                     {{ _("Continue to registration") }}
                                 </button>
+                                {% if full_name %}
+                                <input type="hidden" name="full_name" value="{{ full_name }}">
+                                {% endif %}
                             </form>
                         </div>
                     </div>
