invite: Rename guest users to guests.

--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -22,7 +22,7 @@
                             {% if is_admin %}
                             <option name="invite_as" value="{{ invite_as.REALM_ADMIN }}">{{ _('Organization administrators') }}</option>
                             {% endif %}
-                            <option name="invite_as" value="{{ invite_as.GUEST_USER }}">{{ _('Guest users') }}</option>
+                            <option name="invite_as" value="{{ invite_as.GUEST_USER }}">{{ _('Guests') }}</option>
                         </select>
                     </div>
                 </div>
