settings: Update tip strings for adding custom emoji.

--- a/static/templates/settings/emoji-settings-tip.handlebars
+++ b/static/templates/settings/emoji-settings-tip.handlebars
@@ -1,5 +1,5 @@
 {{#if is_guest}}
-    <div class='tip'>{{t "Guest users cannot edit custom emoji." }}</div>
+    <div class='tip'>{{t "Guests cannot edit custom emoji." }}</div>
 {{else}}
     {{#if realm_add_emoji_by_admins_only}}
     <div class='tip'>{{t "Only organization administrators can add custom emoji in this organization." }}</div>
