alert words: Disable transparency to properly show overlapping alert words.
This commit ensures that if you two alert words "hello" and "Hello world",
the words do not overlap, causing different opacity for different
alert words.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -545,6 +545,10 @@ on a dark background, and don't change the dark labels dark either. */
         -webkit-filter: invert(100%);
         filter: invert(100%);
     }
+
+    .alert-word {
+        background-color: hsl(110, 44%, 39%);
+    }
 }
 
 @-moz-document url-prefix() {
