--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2779,7 +2779,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
 }
 
 .alert-word {
-    background-color: hsla(102, 85%, 57%, 0.5);
+    background-color: hsl(101, 85.7%, 78%);
 }
 
 #organization h1,
