--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -2,7 +2,7 @@
     <div class="bottom_sidebar">
         <ul id="global_filters" class="filters">
             {# Special-case this link so we don't actually go to page top. #}
-            <li data-name="home" class="global-filter active-filter home-link" title="{{ _('All messages') }} (Esc)">
+            <li class="top_left_all_messages global-filter active-filter home-link" title="{{ _('All messages') }} (Esc)">
                 <a href="#">
                     <span class="filter-icon">
                         <i class="fa fa-home" aria-hidden="true"></i>
@@ -14,7 +14,7 @@
                 </a>
                 <span class="arrow stream-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
             </li>
-            <li data-name="private" class="global-filter" title="{{ _('Private messages') }} (P)">
+            <li class="top_left_private_messages global-filter" title="{{ _('Private messages') }} (P)">
                 <a href="#narrow/is/private">
                     <span class="filter-icon">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -25,7 +25,7 @@
                     </span>
                 </a>
             </li>
-            <li data-name="starred" class="global-filter">
+            <li class="top_left_starred_messages global-filter">
                 <a href="#narrow/is/starred">
                     <span class="filter-icon">
                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -36,7 +36,7 @@
                     </span>
                 </a>
             </li>
-            <li data-name="mentioned" class="global-filter">
+            <li class="top_left_mentions global-filter">
                 <a href="#narrow/is/mentioned">
                     <span class="filter-icon">
                         <i class="fa fa-at" aria-hidden="true"></i>
