Remove home-link markup in the main app.
The `home-link` markup wasn't used in the app,
and it was confusing, since we do use that
markup for the portico system.

--- a/static/templates/tab_bar.handlebars
+++ b/static/templates/tab_bar.handlebars
@@ -1,6 +1,6 @@
 <ul id="tab_list">
     {{#each tabs}}
-    <li class="{{active}} {{cls}} {{#if home}}home-link{{/if}}" {{#if data}}data-name="{{data}}"{{/if}}>
+    <li class="{{active}} {{cls}} {{#if data}}data-name="{{data}}"{{/if}}>
         {{#if icon}}
         <i class="fa fa-angle-right" aria-hidden="true"></i>
         {{/if}}
