Make starred message count style subtle.
Makes the starred message counter show only a number
with transparent background and no border.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -25,13 +25,13 @@
                     </span>
                 </a>
             </li>
-            <li class="top_left_starred_messages global-filter">
+            <li id="starred_messages_filter" class="top_left_starred_messages global-filter">
                 <a href="#narrow/is/starred">
                     <span class="filter-icon">
                         <i class="fa fa-star" aria-hidden="true"></i>
                     </span>
                     <span class="hover-underline">{{ _('Starred messages') }}</span>
-                    <span class="count">
+                    <span id="starred_messages_count" class="count">
                         <span class="value"></span>
                     </span>
                 </a>
