--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -193,6 +193,12 @@ li.active-sub-filter {
     margin-right: 15px;
 }
 
+#starred_messages_filter .count {
+    background-color: transparent;
+    border-width: 0;
+    color: inherit;
+}
+
 .topic-box {
     padding-left: 5px;
     margin-right: 30px;
