drafts: Add "show-more" option in drafts list.
Limits the number of visible drafts in the list to a particular number,
here 4; adds "show more" link which displays all the drafts and similarily
"show less" when all are displayed.

Fixes #11217

--- a/static/styles/drafts.scss
+++ b/static/styles/drafts.scss
@@ -70,6 +70,11 @@
     -webkit-font-smoothing: antialiased;
 }
 
+.drafts-list .toggle-show-drafts {
+    display: block;
+    text-align: center;
+}
+
 .draft-row {
     padding: 5px 10px;
 }
