user status: Fix wording in user popover.

--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -90,21 +90,26 @@
     {{#if can_set_away}}
     <li>
         <a href="#" class="set_away_status">
-            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Set status to away{{/tr}}
+            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Set yourself to away{{/tr}}
         </a>
     </li>
     {{/if}}
     {{#if can_revoke_away}}
     <li>
         <a href="#" class="revoke_away_status">
-            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Clear away status{{/tr}}
+            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Set yourself to active{{/tr}}
         </a>
     </li>
     {{/if}}
     {{#if is_me}}
     <li>
         <a href="#" class="update_status_text">
-            <i class="fa fa-comments" aria-hidden="true"></i> {{#tr this}}Update status{{/tr}}
+            <i class="fa fa-comments" aria-hidden="true"></i>
+            {{#if status_text}}
+                {{#tr this}}Edit status message{{/tr}}
+            {{else}}
+                {{#tr this}}Set a status message{{/tr}}
+            {{/if}}
         </a>
     </li>
     {{/if}}
