user status: Fix wording in set-status modal.

--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -152,11 +152,11 @@
     </div>
     <div class="user_status_overlay overlay new-style" data-overlay="user_status_overlay" aria-hidden="true">
         <div class="overlay-content modal-bg">
-            <div class="user_status_change_title">Change user status</div>
+            <div class="user_status_change_title">Set a status message</div>
             <div>
                 <input type="text" class="user_status" />
                 <button class="sea-green rounded button set_user_status">
-                    Change
+                    Save
                 </button>
             </div>
         </div>
