user status: Change icon for set/clear away.

--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -90,14 +90,14 @@
     {{#if can_set_away}}
     <li>
         <a href="#" class="set_away_status">
-            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Set yourself to away{{/tr}}
+            <i class="fa fa-sign-out" aria-hidden="true"></i> {{#tr this}}Set yourself to away{{/tr}}
         </a>
     </li>
     {{/if}}
     {{#if can_revoke_away}}
     <li>
         <a href="#" class="revoke_away_status">
-            <i class="fa fa-circle-thin" aria-hidden="true"></i> {{#tr this}}Set yourself to active{{/tr}}
+            <i class="fa fa-sign-out" aria-hidden="true"></i> {{#tr this}}Set yourself to active{{/tr}}
         </a>
     </li>
     {{/if}}
