user status: Fix tiny green dot in user popover.
We now compute the class that drives the tiny
green/orange/empty dot in the user popover using
the same logic as the buddy list.

This was broken in the early implementation of
set/clear-away, but it was never released.

Fixes #11413

--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -1,7 +1,7 @@
 {{! Contents of the "message info" popup }}
 <ul class="nav nav-list actions_popover info_popover_actions" data-user-id="{{user_id}}">
     <div class="popover_info">
-        <li class="user_{{presence_status}}">
+        <li class="user_{{type}}">
             <b>{{user_full_name}}</b>
             {{#if is_active }}
                 {{#if is_bot}}
